--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-		<div class="container">
-			<p>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui suscipit excepturi perferendis praesentium assumenda?
-				Aperiam iste est, in quos adipisci molestiae inventore, laboriosam non numquam modi, architecto dolorem sit reiciendis.
-			</p>
+		<div class="container main-content">
+			<div class="hero">
+				<div class="hero__bg-img">
+					<div class="hero__heding">frontend and backend</div>
+					<h1 class="hero__title">Learn to program by watching professionals</h1>
+					<p class="hero__text">See how experienced developers solve problems in real time</p>
+				</div>
+				<button class="hero__btn">Try it free 7 days, then $20/mo</button>
+			</div>
+			<form class="sign-up" action="" method="POST">
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, recusandae? Nemo distinctio corporis sint quam quae
+				aliquid velit quia atque accusantium dolor voluptate error saepe ea, maxime, necessitatibus voluptas architecto.
+			</form>
 		</div>
 	</body>
 </html>
